[package]
name = "memfile"
description = "memory backed files using memfd_create with file sealing support"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
keywords = ["memfd", "file", "memory", "sealing", "fd"]
categories = ["filesystem", "os::unix-apis"]
readme = "README.md"

edition = "2018"

[dependencies]
libc = "0.2.84"

[dev-dependencies]
assert2 = "0.3.4"
