[package]
name = "memfile"
description = "memory backed files using memfd_create with file sealing support"
version = "0.3.1"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/memfile-rs"
documentation = "https://docs.rs/memfile"
keywords = ["memfd", "file", "memory", "sealing", "fd"]
categories = ["filesystem", "os::unix-apis"]
readme = "README.md"

edition = "2021"
publish = ["crates-io"]

[dependencies]
libc = "0.2.105"

[dev-dependencies]
assert2 = "0.3.4"
